--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
-    <script defer src= "https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyABz8qOwz-q9P73GQzc-nCdP6TT3LMBdBk&v=3&callback=initMap" onerror="mapError()">
+    <script async defer src= "https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyABz8qOwz-q9P73GQzc-nCdP6TT3LMBdBk&v=3&callback=initMap" onerror="mapError()">
     </script>
 </body>
 </html>
